# Viverna

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  InstallationLog.txt  LICENSE.md  README.md  android_toolchain.cmake  clean.bat  config.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
assets/shaders/: blinn-phong.frag  blinn-phong.vert  common.frag  common.geom  common.glsl  common.vert  debug.frag  debug.vert  depth.frag  depth.geom  depth.vert  dirlight_depth.vert  unlit.frag  unlit.vert  wireframe.frag  wireframe.geom  wireframe.vert
docs/: SHADERS_GUIDE.md
ext/: CMakeLists.txt
ext/android/: CMakeLists.txt
ext/android/native_app_glue/: CMakeLists.txt
ext/desktop/: CMakeLists.txt
ext/desktop/glad/include/glad/: gl.h
ext/desktop/glfw/: CMakeLists.txt
ext/desktop/imgui/: BuildImgui.cpp  CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/stb/: CMakeLists.txt
ext/yaml_cpp/: CMakeLists.txt
include/game/: CameraController.hpp  NewCube.hpp
include/game/components/: EntityName.hpp
include/game/core/: Application.hpp  CameraController.hpp  Fruit.hpp  Snake.hpp  Walls.hpp
include/game/data/: BufferView.hpp
include/game/gui/: EditorGui.hpp
include/game/systems/: MeshRenderer.hpp
include/viverna/core/: Application.hpp  Assets.hpp  BoundingBox.hpp  BoundingSphere.hpp  Debug.hpp  Demos.hpp  Entity.hpp  Family.hpp  Input.hpp  Key.hpp  Scene.hpp  System.hpp  ThreadPool.hpp  Time.hpp  Transform.hpp  TypeId.hpp  VivernaInitializer.hpp  VivernaState.hpp
include/viverna/data/: GpuBuffer.hpp  SparseSet.hpp
include/viverna/ecs/: ComponentBuffer.hpp  Entity.hpp  EntityEvent.hpp  EntityName.hpp  Family.hpp  System.hpp  World.hpp
include/viverna/graphics/: Camera.hpp  Color4.hpp  DirectionLight.hpp  GraphicsAPIHelper.hpp  Image.hpp  Material.hpp  Mesh.hpp  Model.hpp  NativeWindow.hpp  PointLight.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  ShaderCommonCode.hpp  ShaderManager.hpp  Texture.hpp  TextureManager.hpp  Vertex.hpp  Window.hpp
include/viverna/graphics/gpu/: CameraData.hpp  DirectionLightData.hpp  DrawData.hpp  FrameData.hpp  ImplementationInfo.hpp  MeshData.hpp  PointLightData.hpp
include/viverna/maths/: Mat3f.hpp  Mat4f.hpp  MathDefines.hpp  MathUtils.hpp  Quaternion.hpp  Vec2f.hpp  Vec2i.hpp  Vec3f.hpp  Vec4f.hpp
include/viverna/physics/: Collision.hpp
include/viverna/serialization/: CameraSerializer.hpp  DirectionLightSerializer.hpp  MaterialSerializer.hpp  QuaternionSerializer.hpp  SceneSerializer.hpp  ShaderSerializer.hpp  TextureSerializer.hpp  TransformSerializer.hpp  Vec3fSerializer.hpp  Vec4fSerializer.hpp  VivSerializer.hpp  WorldSerializer.hpp
src/: BoundingSphere.cpp  CMakeLists.txt  Camera.cpp  Collision.cpp  GraphicsAPIHelper.hpp  ImplementationInfo.cpp  Mat4f.cpp  MathUtils.cpp  Mesh.cpp  Quaternion.cpp  RenderBatch.hpp  Renderer.cpp  ResourceTracker.hpp  Shader.cpp  ShaderCommonCode.cpp  Texture.cpp  UniformBuffer.cpp  VivernaInitializer.cpp
src/android/: GraphicsAPIHelper.cpp  Input.cpp  NativeWindow.cpp  RendererAPI.cpp  Window.cpp
src/desktop/: Debug.cpp  GraphicsAPIHelper.cpp  Input.cpp  NativeWindow.cpp  RendererAPI.cpp
src/engine/: BoundingBox.cpp  BoundingSphere.cpp  CMakeLists.txt  Camera.cpp  CameraSerializer.cpp  ComponentBuffer.cpp  DirectionLightSerializer.cpp  Entity.cpp  EntityName.cpp  Family.cpp  GpuBuffer.cpp  Image.cpp  Mat4f.cpp  MaterialSerializer.cpp  Mesh.cpp  Model.cpp  PointLightData.cpp  Quaternion.cpp  QuaternionSerializer.cpp  RenderBatch.hpp  Renderer.cpp  Scene.cpp  SceneSerializer.cpp  Shader.cpp  ShaderBucketMapper.hpp  ShaderCommonCode.cpp  ShaderManager.cpp  ShaderSerializer.cpp  System.cpp  Texture.cpp  TextureManager.cpp  TextureSerializer.cpp  ThreadPool.cpp  Time.cpp  Transform.cpp  TransformSerializer.cpp  TypeId.cpp  UniformBuffer.cpp  UniformBuffer.hpp  Vec3f.cpp  (+6 more)
src/engine/android/: Assets.cpp  Debug.cpp  Input.cpp  RendererAPI.cpp
src/engine/desktop/: Assets.cpp  Input.cpp  RendererAPI.cpp  Window.cpp
src/game/: Application.cpp  CMakeLists.txt  CameraController.cpp  EditorGui.cpp  Fruit.cpp  MeshRenderer.cpp  NewCube.cpp  Snake.cpp  Walls.cpp
src/game/android/: main.cpp
src/game/desktop/: main.cpp
test/: CMakeLists.txt  main.cpp  test_0.cpp  test_camera_movement.hpp  test_click.hpp  test_collision.hpp  test_interpolation.hpp  test_spinning_cube.hpp
